--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ body {
 
 header {
   position: sticky;
-  top: 0px; }
+  top: 0px;
+  z-index: 999; }
 
 nav ul {
   list-style: none;
@@ -102,10 +103,12 @@ h2 {
   grid-gap: 10px;
   scrollbar-width: none; }
   .row a {
-    scroll-snap-align: start; }
+    scroll-snap-align: start;
+    width: 320px; }
   .row img {
-    width: 320px;
-    height: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     transform: scale(3);
     transition: .3s ease; }
 
