--- a/style.scss
+++ b/style.scss
@@ -33,6 +33,7 @@ body{
 header{
   position: sticky;
   top: 0px;
+  z-index: 999;
 }
 nav{
   ul{
@@ -121,10 +122,12 @@ h2{
   scrollbar-width:none;
   a{
     scroll-snap-align: start;
+    width: 320px;
   }
   img{
-    width: 320px;
-    height: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     transform: scale(3);
     transition: .3s ease;
   }
